Minor - fixing alignment issue with nav

--- a/ui/src/main/frontend/scss/cms.scss
+++ b/ui/src/main/frontend/scss/cms.scss
@@ -173,6 +173,10 @@ small.card-footer-item {
   margin: 0;
 }
 
+nav .level-left, nav .level-right {
+  flex-shrink: inherit;
+}
+
 .note-group-select-from-files {
   display: none;
 }
